<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:background="#0099cc"
    tools:context=".FullscreenActivity"
    android:id="@+id/fullscreen_content">

    <org.opencv.android.JavaCameraView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/camera_content"
        opencv:show_fps="true"
        opencv:camera_id="any" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"

        android:background="@color/transparent_grey"
        android:id="@+id/settings_content">
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/smooth_edges_on"
            android:textOff="@string/smooth_edges_off"
            android:id="@+id/toggleSmoothingButton"
            android:layout_gravity="center"
            android:checked="true"
            android:onClick="toggleSmoothing"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/toggleLineButton"
            android:layout_toEndOf="@+id/toggleLineButton" />
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/line_feedback_on"
            android:textOff="@string/line_feedback_off"
            android:id="@+id/toggleLineButton"
            android:layout_gravity="center"
            android:checked="true"
            android:onClick="toggleLineFeedback"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toggleSmoothingButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/toggleSmoothingButton"
            android:layout_alignEnd="@+id/toggleSmoothingButton">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/octave"
                android:id="@+id/textView"
                android:textAlignment="center" />

            <NumberPicker
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:id="@+id/numberPicker" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">
        <com.levien.synthesizer.android.widgets.keyboard.KeyboardView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:visibility="gone"
            android:id="@+id/keyboard_view" />

        <!-- Padding for the system bars is applied to fullscreen_content_controls itself, from
             MainActivity, so that the bar's background still runs to the bottom of the screen. -->
        <FrameLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:background="@color/black_overlay" android:orientation="horizontal"
                tools:ignore="UselessParent">

                <Button android:id="@+id/quit_button" style="?metaButtonBarButtonStyle"
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1" android:text="@string/quit_button"
                    android:onClick="quit"/>

                <Button android:id="@+id/pause_button" style="?metaButtonBarButtonStyle"
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1" android:text="@string/pause_button"
                    android:onClick="pause"/>

                <Button android:id="@+id/settings_button" style="?metaButtonBarButtonStyle"
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1" android:text="@string/settings_button"
                    android:onClick="displaySettings"/>

                <Button android:id="@+id/keyboard_button" style="?metaButtonBarButtonStyle"
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1" android:text="@string/keyboard_button"
                    android:onClick="displayKeyboard"/>

                <Button android:id="@+id/main_view_button" style="?metaButtonBarButtonStyle"
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1" android:text="@string/main_view_button"
                    android:onClick="displayMainView"/>

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</FrameLayout>
